docs/versioned_docs/version-5.10/fragments/config-hooks.mdx
```yaml
hooks:                              # struct[]  | Array of hooks to be executed. A hook can only have either one of the following fields defined:
                                    #           | - hooks[*].command which will either execute a command locally or remotely in a container
                                    #           | - hooks[*].upload which will upload files or folders into a container
                                    #           | - hooks[*].download which will download files or folder from a container
                                    #           | - hooks[*].wait which will wait for a container to become running or terminate
                                    #           | - hooks[*].logs which will print the logs for a certain container
- command: "./scripts/my-hook"      # string    | Command to be executed when this hook is triggered
  args: []                          # string[]  | Array of arguments for the command of this hook
  upload:                           # struct    | If defined will upload files or folders into the container.
    localPath: ./test               # string    | The local path of the file or folder
    containerPath: /app             # string    | The remote path where to upload the file or folder into
  download:                         # struct    | If defined will download files or folders from the container.
    containerPath: /app             # string    | The remote path where to download the file or folder from
    localPath: ./test               # string    | The local path where to download the file or folder
  logs:                             # struct    | If logs is defined will print the logs of the target container. This is useful for containers 
                                    #           | that should finish like init containers or job pods. Otherwise this hook will never terminate.
    tailLines: /app                 # int       | If set, the number of lines from the end of the logs to show
  wait:                             # struct    | If wait is defined the hook will wait until the matched pod or container is running or is terminated
                                    #           | with a certain exit code.
    running: true                   # bool      | If running is true, will wait until the matched containers are running. Can be used together with terminatedWithCode.
    terminatedWithCode: 0           # int       | If terminatedWithCode is not nil, will wait until the matched containers are terminated with the given exit code. 
                                    #           | If the container has exited with a different exit code, the hook will fail. Can be used together with running.
    timeout: 150                    # int       | Timeout of seconds to wait for matched containers to reach the given state until the hook will fail.
  os: darwin                        # string    | If specified then this hook is only executed on the given operating system
  background: false                 # bool      | If true DevSpace will not wait for the command to finish and directly move on
  silent: false                     # bool      | If true DevSpace will not print any command output to the console
  where:                            
    container:                      # struct    | If specified, DevSpace will run the command in the container instead of locally
      imageName: my-image           # string    | Name of an image defined in `images` to select pods with
      labelSelector: ...            # struct    | Key Value map of labels and values to select pods with
      containerName: ""             # string    | Container name to use after selecting a pod
      namespace: ""                 # string    | Kubernetes namespace to select pods in
  when:                             # struct    | Trigger for executing this hook 
    before:                         # struct    | Run hook before a certain execution step
      pullSecrets: "all"            # string    | "all" for running hook before creating image pull secrets
      dependencies: "all"           # string    | "all" for running hook before deploying dependencies
      images: "all"                 # string    | "all" for running hook before building the first image
      deployments: "all"            # string    | Name of the deployment you want to run this hook before deploying OR "all" for running hook before deploying the first deployment
    after:                          # struct    | Run hook after a certain execution step
      pullSecrets: "all"            # string    | "all" for running hook after creating image pull secrets
      dependencies: "all"           # string    | "all" for running hook after deploying dependencies
      images: "all"                 # string    | all" for running hook after building the last image
      deployments: "all"            # string    | Name of the deployment you want to run this hook after deploying OR "all" for running hook after deploying the last deployment
    onError:
      pullSecrets: "all"            # string    | "all" for running hook if an error occurs during creating image pull secrets
      dependencies: "all"           # string    | "all" for running hook if an error occurs during deploying dependencies
      images: "all"                 # string    | all" for running hook if an error occurs during building images
      deployments: "all"            # string    | Name of the deployment you want to run this hook if an error occurs during deploying OR "all" for running hook if an error occurs during deploying any deployment
```
